--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="menu_slideshow">Slideshow</string>
 
     <string-array name="filter_options">
-        <item>None</item>
+        <item>Default</item>
         <item>Ascending by price</item>
         <item>Descending by price</item>
         <item>Alphabetical ascending</item>
